# gstreamer_learn

./: CMakeLists.txt  README.md  demo_gstreamer_rtsp.cpp
